--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "10.0.9",
     "react": "17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
   }
