--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "10.0.9",
     "react": "17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.2"
   }
 }
