--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-modal": "^3.14.2"
+    "react-modal": "^3.14.2",
+    "react-pdf": "^5.3.2"
   }
 }
